--- a/drivers/media/platform/msm/camera_v2_markw/fd/Makefile
+++ b/drivers/media/platform/msm/camera_v2_markw/fd/Makefile
@@ -1,5 +1,7 @@
 GCC_VERSION      := $(shell $(CONFIG_SHELL) $(srctree)/scripts/gcc-version.sh $(CROSS_COMPILE)gcc)
 ccflags-y += -Idrivers/media/video/msm
 ccflags-y += -Idrivers/media/platform/msm/camera_v2_markw/common
+ccflags-y += -Idrivers/media/platform/msm/camera_v2_markw
+ccflags-y += -Idrivers/media/platform/msm/camera_v2_markw/pproc/cpp
 
 obj-$(CONFIG_MSM_FD) += msm_fd_dev.o msm_fd_hw.o
